arma-rs/tests/derive/fail_struct_attr.stderr
error: expected #[arma(...)]
 --> tests/derive/fail_struct_attr.rs:4:3
  |
4 | #[arma]
  |   ^^^^

error: unexpected literal attribute
 --> tests/derive/fail_struct_attr.rs:8:8
  |
8 | #[arma("literal")]
  |        ^^^^^^^^^

error: unknown attribute `unknown`
  --> tests/derive/fail_struct_attr.rs:12:8
   |
12 | #[arma(unknown)]
   |        ^^^^^^^

error: unknown attribute `unknown::path`
  --> tests/derive/fail_struct_attr.rs:16:8
   |
16 | #[arma(unknown::path)]
   |        ^^^^^^^^^^^^^

error: duplicate attribute `duplicate`
  --> tests/derive/fail_struct_attr.rs:20:19
   |
20 | #[arma(duplicate, duplicate)]
   |                   ^^^^^^^^^

error: unknown attribute `unknown`
  --> tests/derive/fail_struct_attr.rs:25:12
   |
25 |     #[arma(unknown)]
   |            ^^^^^^^

error: duplicate attribute `duplicate`
  --> tests/derive/fail_struct_attr.rs:31:23
   |
31 |     #[arma(duplicate, duplicate)]
   |                       ^^^^^^^^^
